@@ -1,3 +1,9 @@
+2019-12-02 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/math: Add Doxygen group:
+
+          * src/math/m_angle.c math-angle-proc
+
 2019-11-29 Wiley E. Hill <wileyhill@gmail.com>
 
     * tests/test_arc_math.c: Add random checks for geda_math_arc_shortest_distance.
